Fix Chart Configuration, Add Time Format,

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <label for="chart-type">Choose Chart Type:</label>
     <select id="chart-type">
-        <option value="scatter">Scatter Chart</option>
+        <option value="scatter">Scatter Chart</option>   
         <option value="line">Line Chart</option>
-    </select>
-    <div id="chart-container" style="width: 600px; height: 400px; border: 1px solid #ccc;"></div>
+     </select>
+    <div id="chart-container" ></div>
     
     <script type="module" src="src/main.ts"></script>
 </body>
